[package]
name = "flasher"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-embedded-hal = { version = "0.5.0" , features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040", "boot2-ram-memcpy"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9.1", features = ["defmt"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

once_cell = { version = "=1.19.0", default-features = false, features = ["critical-section"] }
embedded-alloc = { version = "0.6.0", default-features = false, features = ["tlsf"] }

bitfld = { version = "0.1.7" }
zerocopy = { version = "0.8.27", features = ["derive"] }
anyhow = { version = "1.0.99", default-features = false }
miniz_oxide = "0.8.9"
thiserror = { version = "2.0.16", default-features = false }
serde = { version = "1.0.227", default-features = false, features = ["derive"] }
postcard = { git = "https://github.com/jamesmunns/postcard", features = ["experimental-derive", "use-defmt", "heapless-v0_9"] }
num = { version = "0.4.3", default-features = false }
serde_with = { version = "3.14.1", default-features = false, features = ["macros"] }

[profile.release]
debug = true
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
